// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component styled components StyledCloseHandle - basic render: StyledCloseHandle has correct styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "transparent",
  "border": "none",
  "cursor": "pointer",
  "display": "flex",
  "marginLeft": "$theme.sizing.scale600",
  "overflow": "visible",
  "paddingBottom": 0,
  "paddingLeft": 0,
  "paddingRight": 0,
  "paddingTop": 0,
  "width": "$theme.sizing.scale800",
}
`;

exports[`Component styled components StyledDragHandle - basic render: StyledDragHandle has correct styles 1`] = `
Object {
  "alignItems": "center",
  "display": "flex",
  "marginRight": "$theme.sizing.scale600",
  "width": "$theme.sizing.scale800",
}
`;

exports[`Component styled components StyledItem - basic render: StyledItem has correct styles 1`] = `
Object {
  ":hover": Object {
    "borderBottomColor": "$theme.colors.primary100",
    "borderBottomStyle": "solid",
    "borderBottomWidth": "2px",
    "borderLeftColor": "$theme.colors.primary100",
    "borderLeftStyle": "solid",
    "borderLeftWidth": "2px",
    "borderRightColor": "$theme.colors.primary100",
    "borderRightStyle": "solid",
    "borderRightWidth": "2px",
    "borderTopColor": "$theme.colors.primary100",
    "borderTopStyle": "solid",
    "borderTopWidth": "2px",
    "color": "$theme.colors.primary",
  },
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono100",
  "borderBottomColor": "transparent",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "2px",
  "borderLeftColor": "transparent",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "2px",
  "borderRightColor": "transparent",
  "borderRightStyle": "solid",
  "borderRightWidth": "2px",
  "borderTopColor": "transparent",
  "borderTopStyle": "solid",
  "borderTopWidth": "2px",
  "boxShadow": null,
  "cursor": "grab",
  "display": "flex",
  "justifyContent": "space-between",
  "listStyle": "none",
  "paddingBottom": "$theme.sizing.scale600",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale600",
}
`;

exports[`Component styled components StyledItem - dragged: StyledItem has correct styles when being dragged 1`] = `
Object {
  ":hover": Object {},
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono100",
  "borderBottomColor": "$theme.colors.primary",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "2px",
  "borderLeftColor": "$theme.colors.primary",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "2px",
  "borderRightColor": "$theme.colors.primary",
  "borderRightStyle": "solid",
  "borderRightWidth": "2px",
  "borderTopColor": "$theme.colors.primary",
  "borderTopStyle": "solid",
  "borderTopWidth": "2px",
  "boxShadow": "0px 2px 6px rgba(39, 110, 241, 0.32)",
  "cursor": "grabbing",
  "display": "flex",
  "justifyContent": "space-between",
  "listStyle": "none",
  "paddingBottom": "$theme.sizing.scale600",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale600",
}
`;

exports[`Component styled components StyledItem - selected: StyledItem has correct styles when being selected 1`] = `
Object {
  ":hover": Object {},
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono100",
  "borderBottomColor": "$theme.colors.primary",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "2px",
  "borderLeftColor": "$theme.colors.primary",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "2px",
  "borderRightColor": "$theme.colors.primary",
  "borderRightStyle": "solid",
  "borderRightWidth": "2px",
  "borderTopColor": "$theme.colors.primary",
  "borderTopStyle": "solid",
  "borderTopWidth": "2px",
  "boxShadow": null,
  "cursor": "grab",
  "display": "flex",
  "justifyContent": "space-between",
  "listStyle": "none",
  "paddingBottom": "$theme.sizing.scale600",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale600",
}
`;

exports[`Component styled components StyledLabel - basic render: StyledLabel has correct styles 1`] = `
Object {
  "flexGrow": 1,
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
}
`;

exports[`Component styled components StyledList - basic render: StyledList has correct styles 1`] = `
Object {
  "cursor": null,
  "paddingLeft": 0,
}
`;

exports[`Component styled components StyledList - dragging is active: StyledList has correct styles when dragging is active 1`] = `
Object {
  "cursor": "grabbing",
  "paddingLeft": 0,
}
`;

exports[`Component styled components StyledRoot - basic render: StyledRoot has correct styles 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "width": "100%",
}
`;
